--- a/html/turnos.html
+++ b/html/turnos.html
@@ -7,6 +7,9 @@
     <title>TURNOS-ONE BOX CROSSFIT</title>
     <link rel="stylesheet" href="/css/StyleI.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <meta name="description" content="One fit es un centro de entrenamiento ubicado en Don Torcuato, Zona norte del Gran Buenos Aires especializado en Crossfit, levantamiento olimpico y GAP">
+    <meta name="keywords" content="Crossfit, entrenamiento, fitness, zona norte, Don Torcuato, box, GAP, weighlifting, levantamiento,gimnasio, centro">
+    <link rel="shortcut icon" href="/img/icononecf.png" type="image/x-icon">
 </head>
 <body>
     <header>
